hphp/hack/test/typecheck/nonnull/unconstrained_generic_type_parameter.php
<?hh // strict

function cast<T>(T $x): nonnull {
  return $x;
}
